--- a/src/app/home/registration/registration.component.html
+++ b/src/app/home/registration/registration.component.html
@@ -31,8 +31,8 @@
                     </div>
                 </div>
                 <button class="proceed full-width" type="submit">Proceed</button>
-                <div class="error-section">
-                    <p></p>
+                <div class="error-section text-center mt-3 mb-3">
+                    <p>{{ errorMessage }}</p>
                 </div>
             </form>
         </div>
