--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -21,4 +21,9 @@ footer {
     a {
         color: #fff;
     }
+    img {
+        width: 8px;
+        position: relative;
+        top: -1px;
+    }
 }
