--- a/src/app/home/registration/registration.component.html
+++ b/src/app/home/registration/registration.component.html
@@ -1,5 +1,5 @@
      
-    <h1 class="register-account-h1">Register an account</h1> 
+    <h1>Register an account</h1> 
     <div class="d-flex flex-column align-items-center justify-content-center">
         <div class="form-div">
             <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
