Fix mozilla bug

--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -39,6 +39,7 @@
             font-size: 33px;
             color: white;
             width: 70%;
+            text-align: center;
         }
         .small-text {
             color: #B5FF23;
